// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MemberList > スナップショット > メンバーあり（良好ステータス）のスナップショット 1`] = `
<DocumentFragment>
  <div
    class="animate-fade-in-up rounded-xl border bg-card overflow-hidden overflow-x-auto"
  >
    <div
      class="relative w-full overflow-x-auto"
      data-slot="table-container"
    >
      <table
        class="w-full caption-bottom text-sm"
        data-slot="table"
      >
        <thead
          class="[&_tr]:border-b"
          data-slot="table-header"
        >
          <tr
            class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
            data-slot="table-row"
          >
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              メンバー
            </th>
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3 hidden sm:table-cell"
              data-slot="table-head"
            >
              部署
            </th>
            <th
              aria-sort="ascending"
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              <button
                class="flex items-center gap-1 cursor-pointer hover:text-foreground transition-colors duration-150"
              >
                最終1on1
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m5 12 7-7 7 7"
                  />
                  <path
                    d="M12 19V5"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  昇順ソート中
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              <button
                class="flex items-center gap-1 cursor-pointer hover:text-foreground transition-colors duration-150"
              >
                未完了
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  ソート可能
                </span>
              </button>
            </th>
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3 hidden md:table-cell"
              data-slot="table-head"
            >
              ステータス
            </th>
            <th
              class="text-foreground h-10 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3"
              data-slot="table-head"
            >
              <span
                class="sr-only"
              >
                アクション
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
          data-slot="table-body"
        >
          <tr
            class="data-[state=selected]:bg-muted border-b hover:bg-muted/50 hover:shadow-sm cursor-pointer transition-all duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-slot="table-row"
            role="link"
            tabindex="0"
          >
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3"
              data-slot="table-cell"
            >
              <div
                class="flex items-center gap-3 min-w-0"
              >
                <div
                  class="w-8 h-8 text-xs rounded-full flex items-center justify-center text-white font-medium shrink-0"
                  style="background: linear-gradient(135deg, oklch(0.5 0.18 270), oklch(0.62 0.15 270));"
                >
                  田
                </div>
                <div
                  class="min-w-0"
                >
                  <span
                    class="font-medium text-sm block truncate max-w-[180px]"
                    title="田中太郎"
                  >
                    田中太郎
                  </span>
                  <p
                    class="text-sm text-muted-foreground truncate max-w-[180px]"
                    title="シニアエンジニア"
                  >
                    シニアエンジニア
                  </p>
                </div>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground hidden sm:table-cell"
              data-slot="table-cell"
            >
              <span
                class="block truncate max-w-[120px]"
                title="エンジニアリング"
              >
                エンジニアリング
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground"
              data-slot="table-cell"
            >
              6日前
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm"
              data-slot="table-cell"
            >
              <div>
                <span
                  class="text-foreground"
                >
                  3件
                </span>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 hidden md:table-cell"
              data-slot="table-cell"
            >
              <span
                aria-label="ステータス: 良好"
                class="justify-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all duration-200 overflow-hidden [a&]:hover:bg-primary/90 bg-[oklch(0.95_0.05_155)] text-[oklch(0.35_0.1_155)] flex items-center gap-1"
                data-slot="badge"
                data-variant="default"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                良好
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-right"
              data-slot="table-cell"
            >
              <a
                href="/members/member-1/meetings/new"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                  data-size="sm"
                  data-slot="button"
                  data-variant="outline"
                >
                  1on1
                </button>
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MemberList > スナップショット > 空リストのスナップショット 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center text-center py-16"
    data-variant="default"
  >
    <div
      class="rounded-full p-3 mb-3 bg-muted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-12 h-12 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
    </div>
    <p
      class="text-sm font-medium text-foreground/80"
    >
      最初のメンバーを追加しましょう
    </p>
    <p
      class="mt-1 text-sm text-muted-foreground"
    >
      チームメンバーを追加すると、1on1の記録・フォローアップを管理できます
    </p>
    <div
      class="mt-4 flex gap-2"
    >
      <a
        href="/members/new"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-[oklch(0.48_0.22_270)] active:scale-[0.98] h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-size="sm"
          data-slot="button"
          data-variant="default"
        >
          メンバーを追加する
        </button>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MemberList > スナップショット > 複数メンバー（良好・要フォロー混在）のスナップショット 1`] = `
<DocumentFragment>
  <div
    class="animate-fade-in-up rounded-xl border bg-card overflow-hidden overflow-x-auto"
  >
    <div
      class="relative w-full overflow-x-auto"
      data-slot="table-container"
    >
      <table
        class="w-full caption-bottom text-sm"
        data-slot="table"
      >
        <thead
          class="[&_tr]:border-b"
          data-slot="table-header"
        >
          <tr
            class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
            data-slot="table-row"
          >
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              メンバー
            </th>
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3 hidden sm:table-cell"
              data-slot="table-head"
            >
              部署
            </th>
            <th
              aria-sort="ascending"
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              <button
                class="flex items-center gap-1 cursor-pointer hover:text-foreground transition-colors duration-150"
              >
                最終1on1
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m5 12 7-7 7 7"
                  />
                  <path
                    d="M12 19V5"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  昇順ソート中
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3"
              data-slot="table-head"
            >
              <button
                class="flex items-center gap-1 cursor-pointer hover:text-foreground transition-colors duration-150"
              >
                未完了
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  ソート可能
                </span>
              </button>
            </th>
            <th
              class="h-10 text-left align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-xs font-medium text-muted-foreground uppercase tracking-wider px-4 py-3 hidden md:table-cell"
              data-slot="table-head"
            >
              ステータス
            </th>
            <th
              class="text-foreground h-10 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3"
              data-slot="table-head"
            >
              <span
                class="sr-only"
              >
                アクション
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
          data-slot="table-body"
        >
          <tr
            class="data-[state=selected]:bg-muted border-b hover:bg-muted/50 hover:shadow-sm cursor-pointer transition-all duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-slot="table-row"
            role="link"
            tabindex="0"
          >
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3"
              data-slot="table-cell"
            >
              <div
                class="flex items-center gap-3 min-w-0"
              >
                <div
                  class="w-8 h-8 text-xs rounded-full flex items-center justify-center text-white font-medium shrink-0"
                  style="background: linear-gradient(135deg, oklch(0.5 0.15 250), oklch(0.62 0.12 250));"
                >
                  佐花
                </div>
                <div
                  class="min-w-0"
                >
                  <span
                    class="font-medium text-sm block truncate max-w-[180px]"
                    title="佐藤 花子"
                  >
                    佐藤 花子
                  </span>
                  <p
                    class="text-sm text-muted-foreground truncate max-w-[180px]"
                    title="デザイナー"
                  >
                    デザイナー
                  </p>
                </div>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground hidden sm:table-cell"
              data-slot="table-cell"
            >
              <span
                class="block truncate max-w-[120px]"
                title="デザイン"
              >
                デザイン
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground"
              data-slot="table-cell"
            >
              1ヶ月以上前
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm"
              data-slot="table-cell"
            >
              <div>
                <span
                  class="text-foreground"
                >
                  3件
                </span>
                <p
                  class="text-destructive text-sm"
                >
                  2件超過
                </p>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 hidden md:table-cell"
              data-slot="table-cell"
            >
              <span
                aria-label="ステータス: 要フォロー"
                class="justify-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all duration-200 overflow-hidden [a&]:hover:bg-primary/90 animate-pulse-attention bg-[oklch(0.95_0.05_25)] text-[oklch(0.45_0.15_25)] flex items-center gap-1"
                data-slot="badge"
                data-variant="default"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-alert w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="8"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="16"
                    y2="16"
                  />
                </svg>
                要フォロー
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-right"
              data-slot="table-cell"
            >
              <a
                href="/members/member-2/meetings/new"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                  data-size="sm"
                  data-slot="button"
                  data-variant="outline"
                >
                  1on1
                </button>
              </a>
            </td>
          </tr>
          <tr
            class="data-[state=selected]:bg-muted border-b hover:bg-muted/50 hover:shadow-sm cursor-pointer transition-all duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-slot="table-row"
            role="link"
            tabindex="0"
          >
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3"
              data-slot="table-cell"
            >
              <div
                class="flex items-center gap-3 min-w-0"
              >
                <div
                  class="w-8 h-8 text-xs rounded-full flex items-center justify-center text-white font-medium shrink-0"
                  style="background: linear-gradient(135deg, oklch(0.5 0.18 270), oklch(0.62 0.15 270));"
                >
                  田太
                </div>
                <div
                  class="min-w-0"
                >
                  <span
                    class="font-medium text-sm block truncate max-w-[180px]"
                    title="田中 太郎"
                  >
                    田中 太郎
                  </span>
                  <p
                    class="text-sm text-muted-foreground truncate max-w-[180px]"
                    title="シニアエンジニア"
                  >
                    シニアエンジニア
                  </p>
                </div>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground hidden sm:table-cell"
              data-slot="table-cell"
            >
              <span
                class="block truncate max-w-[120px]"
                title="エンジニアリング"
              >
                エンジニアリング
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm text-muted-foreground"
              data-slot="table-cell"
            >
              6日前
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-sm"
              data-slot="table-cell"
            >
              <div>
                <span
                  class="text-foreground"
                >
                  3件
                </span>
              </div>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 hidden md:table-cell"
              data-slot="table-cell"
            >
              <span
                aria-label="ステータス: 良好"
                class="justify-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all duration-200 overflow-hidden [a&]:hover:bg-primary/90 bg-[oklch(0.95_0.05_155)] text-[oklch(0.35_0.1_155)] flex items-center gap-1"
                data-slot="badge"
                data-variant="default"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
                良好
              </span>
            </td>
            <td
              class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] px-4 py-3 text-right"
              data-slot="table-cell"
            >
              <a
                href="/members/member-1/meetings/new"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                  data-size="sm"
                  data-slot="button"
                  data-variant="outline"
                >
                  1on1
                </button>
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
